Thank you fix first name not appearing in heading Application-summary: fix applicant card not taking up full width on mobile

--- a/app/styles/components/applicant-card.styl
+++ b/app/styles/components/applicant-card.styl
@@ -26,6 +26,8 @@ $applicantCardMaxWidth ?= 40em
 		+media-query($breakpointMain)
 			display block
 	+media-query($breakpointMain)
+		&-card
+			width 100%
 		&, &-card
 			max-width inherit !important
 		&s &, &s &-card, &-summary &-card
